<resources>

    <string name="app_name">Fifteen Puzzles</string>
    <string name="game_time">Time</string>
    <string name="game_steps">Steps</string>
    <string name="game_congraz_title">Congratulations!</string>
    <string name="game_congraz_message">You\'ve solved it!</string>
    <string name="pref_number_picker_base_reset">Reset value</string>
    
    <!-- Changelog -->
    <string name="changelog">Changelog</string>

    <!-- Download Service -->
    <string name="download_service_label">Download service</string>
    <string name="download_service_notification_success_text">App was successfully updated!</string>
    <string name="download_service_notification_downloading_text">Downloading new version…</string>
    <string name="download_service_notification_downloading_info">Preparing…</string>
    <string name="download_service_notification_downloading_eta">ETA:</string>
    <string name="download_service_install_please_toast">Please, press \"Install\" button to install new version</string>

    <!-- Success solved -->
    <string name="game_gameover_awesome">Awesome!</string>
    <string name="game_gameover_results">Your results are:\n\u0009time\u0020\u0020: %1$s\n\u0009steps: %2$s</string>
    <string name="game_gameover_user">User</string>
    <string name="game_gameover_share_dialog_title">Share</string>
    <string name="game_gameover_share_body">I solved a puzzle in %1$s / %2$s steps! Download Fifteen Puzzle</string>

    <!-- ActionBar -->
    <string name="action_bar_new_game">New game</string>
    <string name="action_bar_settings">Settings</string>
    <string name="action_bar_download_new_version">Download new version</string>
    <string name="action_bar_statistic_graph">Show graph</string>
    <string name="action_bar_statistic_clear">Clear statistic</string>

    <!-- Rollback -->
    <string name="rollback">Downgrade</string>
    <string name="rollback_error_project_folder">Error reading project\'s folder from storage.</string>
    <string name="rollback_error_project_folder_empty">There are no older versions.</string>
    <string name="rollback_error_damaged_file">Damaged file.</string>

    <!-- Updater -->
    <string name="auto_updater">Auto-Updater</string>
    <string name="auto_updater_changelog">Changelog:</string>
    <string name="auto_updater_changelog_failed">Downloading changelog failed.</string>
    <string name="auto_updater_downloading_dialog">Downloading…</string>
    <string name="auto_updater_downloading_error1">Failed to open connection.</string>
    <string name="auto_updater_downloading_error2">Failed to open input stream.</string>
    <string name="auto_updater_downloading_error3">Failed to create output file.</string>
    <string name="auto_updater_downloading_error4">Download failed.</string>
    <string name="auto_updater_downloading_error_connection">Please enable your Internet connection first.</string>
    <string name="auto_updater_notification_summary">Update is available!</string>

    <!-- Statistic -->
    <string name="stats">Statistic</string>
    <string name="stats_time">@string/game_time</string>
    <string name="stats_steps">@string/game_steps</string>
    <string name="stats_username_and_date">Username\nDate</string>
    <string name="stats_graph_title">Graph of results</string>
    <string name="stats_drop_title">Clear statistic</string>
    <string name="stats_drop_message">This action will clear all results! Data can not be restored!</string>
    <string name="stats_dropped_sucessfully_toast">Scores\' database has been dropped successfully.</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_statistic2">Your best game scores!</string>
    <string name="settings_statistic">Statistics</string>
    <string name="settings_category">Settings</string>
    <string name="settings_nickname_default">Magician</string>
    <string name="settings_nickname3">Enter your new user name</string>
    <string name="settings_nickname2">Current user name is</string>
    <string name="settings_nickname">User name</string>
    <string name="settings_puzzle_length2">Pick the number of chips per line</string>
    <string name="settings_puzzle_length">Number of chips</string>
    <string name="settings_category_other">Other</string>
    <string name="settings_other_about2">Feedback and additional information</string>
    <string name="settings_other_about">About</string>
    <string name="settings_other_about_version">Version / Changelog</string>
    <string name="settings_other_about_copyright2">Artem Chepurnoy 2012–2013</string>
    <string name="settings_other_about_copyright">Copyright</string>
    <string name="settings_other_about_feedback_failed">There are no email clients installed.</string>
    <string name="settings_other_about_feedback2">Post your suggestions and bug-reports</string>
    <string name="settings_other_about_feedback">Feedback</string>
    <string name="settings_other_about_github2">Visit project page at GitHub</string>
    <string name="settings_other_about_github">GitHub</string>
    <string name="settings_other_about_rollback2">Back to older versions of game</string>
    <string name="settings_other_about_rollback">Downgrade</string>

</resources>
