<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:this="http://schemas.android.com/apk/res-auto" >

    <com.achep.FifteenPuzzle.preferences.PrefIcon
        android:summary="@string/settings_statistic2"
        android:title="@string/settings_statistic"
        this:icon="@drawable/ic_settings_stats" >
        <intent android:action="com.achep.FifteenPuzzle.stats.StatsActivity" />
    </com.achep.FifteenPuzzle.preferences.PrefIcon>

    <PreferenceCategory android:title="@string/settings_category" >
        <EditTextPreference
            android:defaultValue="@string/settings_nickname_default"
            android:dialogIcon="@drawable/ic_actionbar_user"
            android:dialogMessage="@string/settings_nickname3"
            android:key="pref_user_name"
            android:summary="@string/settings_nickname2"
            android:title="@string/settings_nickname" />

        <com.achep.FifteenPuzzle.preferences.PrefPuzzleLengthPicker
            android:summary="@string/settings_puzzle_length2"
            android:title="@string/settings_puzzle_length" />
    </PreferenceCategory>

</PreferenceScreen>