<!--
     Copyright (C) 2012 AChep@xda <artemchep@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/action_bar_height"
        android:background="@color/action_bar_background" >

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/image_view_selector" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:src="@drawable/ic_actionbar_back" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingBottom="8dip"
                android:paddingLeft="4dip"
                android:paddingTop="8dip"
                android:src="@drawable/ic_launcher" />
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:text="@string/stats"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical|right"
            android:paddingRight="4dip" >

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="@dimen/action_bar_height"
                android:layout_height="fill_parent"
                android:padding="8dip"
                android:scaleType="center" />

            <ImageView
                android:id="@+id/clear"
                android:layout_width="@dimen/action_bar_height"
                android:layout_height="fill_parent"
                android:background="@drawable/image_view_selector"
                android:scaleType="center"
                android:src="@drawable/ic_actionbar_delete"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/action_bar_divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:layout_marginTop="20dip"
        android:background="#000"
        android:gravity="center_vertical"
        android:paddingLeft="15dip"
        android:paddingRight="?android:attr/scrollbarSize" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/image_view_selector"
            android:text="@string/settings_nickname" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/time_sort"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/image_view_selector"
                android:gravity="center"
                android:text="@string/game_time" />

            <TextView
                android:id="@+id/steps_sort"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/image_view_selector"
                android:gravity="center"
                android:text="@string/game_steps" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="20dip"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/list_view_background_dark" />

</LinearLayout>